fmsg patched(formula_str), refactored functions(claude), new start for test.Rmd

--- a/ipynb/geomx_merger.ipynb
+++ b/ipynb/geomx_merger.ipynb
@@ -8166,10 +8166,10 @@
     "generate_mapping_template: column 매핑 템플릿 생성; 즉, dataset 1, 2, 3에서 사용된 PanCK, Panck, ck 같은 서로 다른 column명들을 어떻게 바꿔줄지 (예: \"CK\"), 값들은 뭘로 바꿔줄지 (예: True->TRUE)\n",
     "apply_mappings_and_merge: 위에서 만든 매핑 파일을 읽어서, 모든 메타데이터를 변환시키고, 병합. -->\n",
     "AOIMatcher 하에...\n",
-    "match_aoi_columns: merged matrix & merged metadata를 읽어서 매칭시킴.\n",
+    "<!-- match_aoi_columns: merged matrix & merged metadata를 읽어서 매칭시킴.\n",
     "매칭 딕셔너리를 생성한다. metadata의 AOI명에 대하여, 1) 이것이 matrix의 AOI명에 있으면 그냥 매칭시키고, 2) 없으면, pattern은 _{}, | {}, {}이 _로 분리된 것의 마지막에 있는지, |로 분리된 것의 마지막에 있는지로 찾음.\n",
     "# -> 이거 좀 많이 잘못된거같은데..? 오히려 맨 앞에 나와야 하는데.\n",
-    "Matrix에만 있는 column를 정리해둠. 매칭안된 것들."
+    "Matrix에만 있는 column를 정리해둠. 매칭안된 것들. -->"
    ]
   },
   {
@@ -11643,7 +11643,12 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "e8dd0d09-88a1-4f34-99fd-95f380467a5e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
