Fix major devtools::check() warnings
FIXED:
- Added missing dependencies to DESCRIPTION Suggests:
  * ComplexUpset, DESeq2, DiagrammeR, rmarkdown, userfriendlyscience
  * GeoMxTools, GeoMxWorkflows, NanoStringNCTools (GeoMx analysis)
  * knitr (for vignettes/reports)

- Moved non-R data files to proper location:
  * data/41590_2024_1994_MOESM6_ESM.xlsx → inst/extdata/
  * data/NicheNetData → inst/extdata/
  * Removed empty data/ directory

RESULT:
✅ Package dependencies properly declared
✅ Data files in correct location
✅ Follows R package best practices

REMAINING (ACCEPTABLE FOR DEVELOPMENT):
- Non-ASCII characters in gene_list.R/legacy.R (gene names from databases)
- Some undocumented legacy functions (will be deprecated)
- Import warnings (namespace conflicts, expected with so many packages)
- Line width notes (cosmetic, won't affect function)

--- a/ipynb/geomx_merger.ipynb
+++ b/ipynb/geomx_merger.ipynb
@@ -15574,6 +15574,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "661e5e43",
+   "metadata": {},
+   "source": [
+    "# Metadata Merger - Refactored Clean Version\n",
+    "\n",
+    "**Goals:**\n",
+    "1. Extract metadata from all SegmentProperties sheets\n",
+    "2. Identify and harmonize column names across datasets\n",
+    "3. Merge metadata by data type (CTA, WTA, MOUSE)\n",
+    "4. Match to count matrices\n",
+    "5. Create concise output for project managers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8fceef1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37855f2a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f34e2ac",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6954a984-7385-4dd9-baa9-7e7d6fb84017",
